# smgf

./: Cargo.toml  README.md
src/: lib.rs  material.rs  planar.rs
src/telegrapher/: mod.rs
